fix(projects): fix wrong background image paths

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -92,25 +92,25 @@
         
 
         &-01 {
-            background-image: url("/assets/img/projects/project-01.png");
+            background-image: url("../img/projects/project-01.png");
         }
         &-02 {
-            background-image: url("/assets/img/projects/project-02.png");
+            background-image: url("../img/projects/project-02.png");
         }
         &-03 {
-            background-image: url("/assets/img/projects/project-03.png");
+            background-image: url("../img/projects/project-03.png");
         }
         &-04 {
-            background-image: url("/assets/img/projects/project-04.png");
+            background-image: url("../img/projects/project-04.png");
         }
         &-05 {
-            background-image: url("/assets/img/projects/project-05.png");
+            background-image: url("../img/projects/project-05.png");
         }
         &-06 {
-            background-image: url("/assets/img/projects/project-06.png");
+            background-image: url("../img/projects/project-06.png");
         }
         &-07 {
-            background-image: url("/assets/img/projects/project-07.png");
+            background-image: url("../img/projects/project-07.png");
         }
     }
 }
