--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -769,25 +769,25 @@ body {
   margin: 0 20px;
 }
 .projects-slides .project-01 {
-  background-image: url("/assets/img/projects/project-01.png");
+  background-image: url("../img/projects/project-01.png");
 }
 .projects-slides .project-02 {
-  background-image: url("/assets/img/projects/project-02.png");
+  background-image: url("../img/projects/project-02.png");
 }
 .projects-slides .project-03 {
-  background-image: url("/assets/img/projects/project-03.png");
+  background-image: url("../img/projects/project-03.png");
 }
 .projects-slides .project-04 {
-  background-image: url("/assets/img/projects/project-04.png");
+  background-image: url("../img/projects/project-04.png");
 }
 .projects-slides .project-05 {
-  background-image: url("/assets/img/projects/project-05.png");
+  background-image: url("../img/projects/project-05.png");
 }
 .projects-slides .project-06 {
-  background-image: url("/assets/img/projects/project-06.png");
+  background-image: url("../img/projects/project-06.png");
 }
 .projects-slides .project-07 {
-  background-image: url("/assets/img/projects/project-07.png");
+  background-image: url("../img/projects/project-07.png");
 }
 
 .slider-prev, .slider-next {
